--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <!--=============== CSS ===============-->
       <link rel="stylesheet" href="assets/css/styles.css">
 
-      <title>Responsive camping website - Bedimcode</title>
+      <title>Camping website </title>
    </head>
    <body>
       <!--==================== HEADER ====================-->
@@ -98,7 +98,7 @@
       </main>
       
       <!--=============== GSAP ===============-->
-      <script src=""></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
 
       <!--=============== MAIN JS ===============-->
       <script src="assets/js/main.js"></script>
